syntax = "proto3";
package pb;

option go_package = "internal/pb";

// FIXME -- should we move the below to points? Then the
// API would not have to change in the future when we add
// features.
message NatsRequest {
    bool includeDel = 1;
    string type = 2;
}
